# WildfireSimClient

./: CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  TileMap.cpp  TileMap.h  Tiles.cpp  Tiles.h  color.hpp  main.cpp
Client/: CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  TileMap.cpp  TileMap.h  main.cpp
Server/: main.c
